src/objects/RefundPart__c.object
<CustomObject>
    <description>The portions of the refunds.</description>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date when the invoice was created in the DAZN system.</description>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditMemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit memos that you issued to your customers to reduce invoice and account balances.</description>
        <inlineHelpText>Credit memos that you issued to your customers to reduce invoice and account balances.</inlineHelpText>
        <label>Credit Memo</label>
        <referenceTo>CreditMemo__c</referenceTo>
        <relationshipLabel>Refund Parts</relationshipLabel>
        <relationshipName>Refund_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The money sent by a customer to pay for charges related to their subscriptions.</description>
        <inlineHelpText>The money sent by a customer to pay for charges related to their subscriptions.</inlineHelpText>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Refund Parts</relationshipLabel>
        <relationshipName>Refund_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefundAmount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <description>Represents money that is returned to a customer, or a reversed transaction.</description>
        <inlineHelpText>Represents money that is returned to a customer, or a reversed transaction.</inlineHelpText>
        <label>Refund</label>
        <referenceTo>Refund__c</referenceTo>
        <relationshipLabel>Refund Parts</relationshipLabel>
        <relationshipName>Refund_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the DAZN system.</description>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Refund Part</label>
    <nameField>
        <label>Refund Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Refund Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>